istio-ingressgateway/envoy/diff-002-003.json
{
  "configs": [
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
      "dynamic_listeners": [
        {
          "active_state": {
            "last_updated": "2024-04-13T11:10:33.861Z",
            "listener": {
              "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
              "address": {
                "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 8080
                }
              },
              "filter_chains": [
                {
                  "filters": [
                    {
                      "name": "envoy.filters.network.http_connection_manager",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "forward_client_cert_details": "SANITIZE_SET",
                        "http_filters": [
                          {
                            "name": "istio.metadata_exchange",
                            "typed_config": {
                              "@type": "type.googleapis.com/udpa.type.v1.TypedStruct",
                              "type_url": "type.googleapis.com/io.istio.http.peer_metadata.Config",
                              "value": {
                                "upstream_discovery": [
                                  {
                                    "istio_headers": {}
                                  },
                                  {
                                    "workload_discovery": {}
                                  }
                                ],
                                "upstream_propagation": [
                                  {
                                    "istio_headers": {}
                                  }
                                ]
                              }
                            }
                          },
                          {
                            "name": "envoy.filters.http.grpc_stats",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig",
                              "emit_filter_state": true,
                              "stats_for_all_methods": false
                            }
                          },
                          {
                            "name": "istio.alpn",
                            "typed_config": {
                              "@type": "type.googleapis.com/istio.envoy.config.filter.http.alpn.v2alpha1.FilterConfig",
                              "alpn_override": [
                                {
                                  "alpn_override": [
                                    "http/1.0",
                                    "istio",
                                    "istio-http/1.0"
                                  ]
                                },
                                {
                                  "alpn_override": [
                                    "http/1.1",
                                    "istio",
                                    "istio-http/1.1"
                                  ],
                                  "upstream_protocol": "HTTP11"
                                },
                                {
                                  "alpn_override": [
                                    "h2",
                                    "istio",
                                    "istio-h2"
                                  ],
                                  "upstream_protocol": "HTTP2"
                                }
                              ]
                            }
                          },
                          {
                            "name": "envoy.filters.http.fault",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault"
                            }
                          },
                          {
                            "name": "envoy.filters.http.cors",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                            }
                          },
                          {
                            "name": "istio.stats",
                            "typed_config": {
                              "@type": "type.googleapis.com/stats.PluginConfig",
                              "disable_host_header_fallback": true
                            }
                          },
                          {
                            "name": "envoy.filters.http.router",
                            "typed_config": {
                              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                            }
                          }
                        ],
                        "http_protocol_options": {},
                        "normalize_path": true,
                        "path_with_escaped_slashes_action": "KEEP_UNCHANGED",
                        "rds": {
                          "config_source": {
                            "ads": {},
                            "initial_fetch_timeout": "0s",
                            "resource_api_version": "V3"
                          },
                          "route_config_name": "http.8080"
                        },
                        "request_id_extension": {
                          "typed_config": {
                            "@type": "type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig",
                            "use_request_id_for_trace_sampling": true
                          }
                        },
                        "server_name": "istio-envoy",
                        "set_current_client_cert_details": {
                          "cert": true,
                          "dns": true,
                          "subject": true,
                          "uri": true
                        },
                        "stat_prefix": "outbound_0.0.0.0_8080",
                        "stream_idle_timeout": "0s",
                        "tracing": {
                          "client_sampling": {
                            "value": 100
                          },
                          "custom_tags": [
                            {
                              "metadata": {
                                "kind": {
                                  "request": {}
                                },
                                "metadata_key": {
                                  "key": "envoy.filters.http.rbac",
                                  "path": [
                                    {
                                      "key": "istio_dry_run_allow_shadow_effective_policy_id"
                                    }
                                  ]
                                }
                              },
                              "tag": "istio.authorization.dry_run.allow_policy.name"
                            },
                            {
                              "metadata": {
                                "kind": {
                                  "request": {}
                                },
                                "metadata_key": {
                                  "key": "envoy.filters.http.rbac",
                                  "path": [
                                    {
                                      "key": "istio_dry_run_allow_shadow_engine_result"
                                    }
                                  ]
                                }
                              },
                              "tag": "istio.authorization.dry_run.allow_policy.result"
                            },
                            {
                              "metadata": {
                                "kind": {
                                  "request": {}
                                },
                                "metadata_key": {
                                  "key": "envoy.filters.http.rbac",
                                  "path": [
                                    {
                                      "key": "istio_dry_run_deny_shadow_effective_policy_id"
                                    }
                                  ]
                                }
                              },
                              "tag": "istio.authorization.dry_run.deny_policy.name"
                            },
                            {
                              "metadata": {
                                "kind": {
                                  "request": {}
                                },
                                "metadata_key": {
                                  "key": "envoy.filters.http.rbac",
                                  "path": [
                                    {
                                      "key": "istio_dry_run_deny_shadow_engine_result"
                                    }
                                  ]
                                }
                              },
                              "tag": "istio.authorization.dry_run.deny_policy.result"
                            },
                            {
                              "literal": {
                                "value": "latest"
                              },
                              "tag": "istio.canonical_revision"
                            },
                            {
                              "literal": {
                                "value": "istio-ingressgateway"
                              },
                              "tag": "istio.canonical_service"
                            },
                            {
                              "literal": {
                                "value": "Kubernetes"
                              },
                              "tag": "istio.cluster_id"
                            },
                            {
                              "literal": {
                                "value": "cluster.local"
                              },
                              "tag": "istio.mesh_id"
                            },
                            {
                              "literal": {
                                "value": "istio-system"
                              },
                              "tag": "istio.namespace"
                            }
                          ],
                          "overall_sampling": {
                            "value": 100
                          },
                          "random_sampling": {
                            "value": 1
                          }
                        },
                        "upgrade_configs": [
                          {
                            "upgrade_type": "websocket"
                          }
                        ],
                        "use_remote_address": true
                      }
                    }
                  ]
                }
              ],
              "listener_filters_timeout": "0s",
              "name": "0.0.0.0_8080",
              "traffic_direction": "OUTBOUND"
            },
            "version_info": "2024-04-13T11:10:33Z/52"
          },
          "name": "0.0.0.0_8080"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "dynamic_route_configs": [
        {
          "last_updated": "2024-04-13T11:10:33.864Z",
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "ignore_port_in_host_matching": true,
            "max_direct_response_body_size_bytes": 1048576,
            "name": "http.8080",
            "validate_clusters": false,
            "virtual_hosts": [
              {
                "domains": [
                  "*"
                ],
                "name": "blackhole:8080"
              }
            ]
          },
          "version_info": "2024-04-13T11:10:33Z/52"
        }
      ]
    }
  ]
}
